# balanco-hidrico-reservatorios

./: README.md
balanco_hidrico_reservatorios/: __init__.py  balanco_hidrico.py  cavs.py  curva_de_regularização.py  evaporacao_do_lago.py  pyproject.toml  reservatorios.py  serie_temporal.py
balanco_hidrico_reservatorios/balanco_hidrico_reservatorios/: cavs.py  conversor.py  curva_de_regularização.py  janelas_temporais.py  regularizacao_de_vazoes.py  serie_temporal.py  utilidades.py
