[tool.poetry]
name = "balanco-hidrico-reservatorios"
version = "0.1.0"
description = ""
authors = ["mvcastro <mvcastro1975@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
